Fix Firefox drawboard + backport new upload button (Oasis?) Keep forms from resetting when page is left Fix nickname colors not showing up on comment previews Remove use of is_ajax which might make this work on newer Django? Remove girls.json and blacklist.json

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ __pycache__/
 *.save
 
 # Local settings
-closedverse/settings.py
+/closedverse/settings.py
 
 # Migrations
 closedverse_main/migrations
@@ -27,3 +27,12 @@ media/*
 
 # Just in case
 .DS_Store
+
+
+#My
+closedverse todo
+closedverse todo (copy 1)
+closedverse_main/models_new.py
+db-dot.pdf
+db-osage.pdf
+sqleton
